RESOLVED FIXED156931
[iOS] Crash at -[WebAVPlayerLayer resolveBounds]
https://bugs.webkit.org/show_bug.cgi?id=156931
Summary [iOS] Crash at -[WebAVPlayerLayer resolveBounds]
Jer Noble
Reported 2016-04-22 14:17:55 PDT
[iOS] Crash at -[WebAVPlayerLayer resolveBounds]
Attachments
Patch (1.71 KB, patch)
2016-04-22 14:21 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2016-04-22 14:21:09 PDT
Jer Noble
Comment 2 2016-04-22 14:49:20 PDT
Note You need to log in before you can comment on or make changes to this bug.