[iOS] Crash at -[WebAVPlayerLayer resolveBounds] https://bugs.webkit.org/show_bug.cgi?id=156931 <rdar://problem/25865315>

Reviewed by Eric Carlson.

When cloning the WebAVPlayerLayer, we must copy over the fullscreenInterface to the cloned layer.

* platform/ios/WebVideoFullscreenInterfaceAVKit.mm:
(WebAVPlayerLayerView_startRoutingVideoToPictureInPicturePlayerLayerView):

Canonical link: https://commits.webkit.org/175036@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199912 268f45cc-cd09-0410-ab3c-d52691b4dbfc